k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-handson-api
  namespace: k8s-10
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: k8s-10
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: 716753868777.dkr.ecr.ap-northeast-1.amazonaws.com/k8s-handson-api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
