k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-handson-db
  namespace: k8s-10
spec:
  selector:
    app: db
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: k8s-10
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: 716753868777.dkr.ecr.ap-northeast-1.amazonaws.com/k8s-handson-db:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
