k8s/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-handson-ui
  namespace: k8s-10
spec:
  selector:
    app: ui
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: k8s-10
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 2
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: 716753868777.dkr.ecr.ap-northeast-1.amazonaws.com/k8s-handson-ui-10:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
